[gd_scene load_steps=12 format=3 uid="uid://dysudfsa7cpo"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_jyt4m"]
[ext_resource type="Texture2D" uid="uid://3jsmyru7r6no" path="res://images/main_icon.png" id="2_nbnqh"]
[ext_resource type="PackedScene" uid="uid://c2adget47swu4" path="res://scenes/prefabs/health.tscn" id="3_udr7f"]
[ext_resource type="PackedScene" uid="uid://b5tpdgc5545oh" path="res://scenes/prefabs/overlap/hurtbox.tscn" id="4_b1a61"]
[ext_resource type="PackedScene" uid="uid://c4fpixmoilald" path="res://scenes/prefabs/overlap/hitbox.tscn" id="5_s33xk"]
[ext_resource type="AudioStream" uid="uid://cmd5ceh7ely4a" path="res://audio/new/Dash.wav" id="6_y13r1"]
[ext_resource type="AudioStream" uid="uid://dbgorqbh2nqxy" path="res://audio/new/Laser_Shoot.wav" id="7_1phm2"]
[ext_resource type="AudioStream" uid="uid://d3qx1bp4vabvg" path="res://audio/new/Hit_Hurt.wav" id="8_1cg87"]
[ext_resource type="AudioStream" uid="uid://gfxucc3mtuet" path="res://audio/new/Death.wav" id="9_uobmb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mvd8"]
size = Vector2(33, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pn4y4"]
size = Vector2(33, 31)

[node name="player" type="CharacterBody2D"]
z_index = 100
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_jyt4m")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-18, -16, 17, -16, 16, 16, -16, 17)

[node name="Sprite2D" type="Sprite2D" parent="CollisionPolygon2D"]
z_index = 3
position = Vector2(-0.5, 0.5)
scale = Vector2(2.0625, 1.9375)
texture = ExtResource("2_nbnqh")

[node name="Proj_Position_Holder" type="Node2D" parent="."]

[node name="Proj_Position" type="Node2D" parent="Proj_Position_Holder"]
position = Vector2(0, -42)

[node name="health" parent="." instance=ExtResource("3_udr7f")]

[node name="Dash_Timer" type="Timer" parent="."]
wait_time = 0.15

[node name="Bomb_Timer" type="Timer" parent="."]

[node name="Fire_Timer" type="Timer" parent="."]
wait_time = 0.15

[node name="Hurtbox" parent="." instance=ExtResource("4_b1a61")]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_6mvd8")

[node name="Hitbox" parent="." instance=ExtResource("5_s33xk")]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_pn4y4")

[node name="Dash_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_y13r1")
bus = &"SFX"

[node name="Fire_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1phm2")
bus = &"SFX"

[node name="Hit_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_1cg87")
bus = &"SFX"

[node name="Death_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_uobmb")
bus = &"SFX"

[connection signal="health_changed" from="health" to="." method="_on_health_health_changed"]
[connection signal="killed" from="health" to="." method="_on_health_killed"]
[connection signal="timeout" from="Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Bomb_Timer" to="." method="_on_bomb_timer_timeout"]
[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
